// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM Walker tests Label carried through for generated elements 1`] = `
Array [
  Object {
    "component": "storyboard",
    "container": Object {},
    "globalFrame": null,
    "label": "Storyboard",
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "childrenTemplatePaths": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": null,
          "localFrame": null,
          "props": Object {},
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 0,
            "coordinateSystemBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {},
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {},
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": false,
          },
          "templatePath": Object {
            "element": Array [
              "utopia-storyboard-uid",
              "scene-aaa",
            ],
            "scene": Object {
              "sceneElementPath": Array [],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": true,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": null,
      "localFrame": null,
      "props": Object {
        "data-uid": "utopia-storyboard-uid",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 0,
        "clientWidth": 0,
        "coordinateSystemBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {},
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {},
        "parentLayoutSystem": "nonfixed",
        "position": "static",
        "usesParentBounds": false,
      },
      "templatePath": Object {
        "element": Array [
          "utopia-storyboard-uid",
        ],
        "scene": Object {
          "sceneElementPath": Array [],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
  Object {
    "component": "App",
    "container": Object {
      "layoutSystem": "pinSystem",
    },
    "globalFrame": Object {
      "height": 812,
      "width": 375,
      "x": 0,
      "y": 0,
    },
    "label": undefined,
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": Object {
            "height": 0,
            "width": 375,
            "x": 0,
            "y": 0,
          },
          "localFrame": Object {
            "height": 0,
            "width": 375,
            "x": 0,
            "y": 0,
          },
          "props": Object {
            "data-label": "Plane",
            "data-uid": "bbb-1",
            "data-utopia-original-uid": "bbb",
          },
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 375,
            "coordinateSystemBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": true,
          },
          "templatePath": Object {
            "element": Array [
              "aaa",
              "bbb-1",
            ],
            "scene": Object {
              "sceneElementPath": Array [
                "utopia-storyboard-uid",
                "scene-aaa",
              ],
              "type": "scenepath",
            },
          },
        },
        Object {
          "children": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": Object {
            "height": 0,
            "width": 375,
            "x": 0,
            "y": 0,
          },
          "localFrame": Object {
            "height": 0,
            "width": 375,
            "x": 0,
            "y": 0,
          },
          "props": Object {
            "data-label": "Plane",
            "data-uid": "bbb-2",
            "data-utopia-original-uid": "bbb",
          },
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 375,
            "coordinateSystemBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": true,
          },
          "templatePath": Object {
            "element": Array [
              "aaa",
              "bbb-2",
            ],
            "scene": Object {
              "sceneElementPath": Array [
                "utopia-storyboard-uid",
                "scene-aaa",
              ],
              "type": "scenepath",
            },
          },
        },
        Object {
          "children": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": Object {
            "height": 0,
            "width": 375,
            "x": 0,
            "y": 0,
          },
          "localFrame": Object {
            "height": 0,
            "width": 375,
            "x": 0,
            "y": 0,
          },
          "props": Object {
            "data-label": "Plane",
            "data-uid": "bbb-3",
            "data-utopia-original-uid": "bbb",
          },
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 375,
            "coordinateSystemBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": true,
          },
          "templatePath": Object {
            "element": Array [
              "aaa",
              "bbb-3",
            ],
            "scene": Object {
              "sceneElementPath": Array [
                "utopia-storyboard-uid",
                "scene-aaa",
              ],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": false,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "localFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "props": Object {
        "data-uid": "aaa",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
        "style": Object {
          "alignContent": undefined,
          "alignItems": undefined,
          "alignSelf": undefined,
          "bottom": 0,
          "flexBasis": undefined,
          "flexDirection": undefined,
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": undefined,
          "height": undefined,
          "justifyContent": undefined,
          "left": 0,
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
          "maxHeight": undefined,
          "maxWidth": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 812,
        "clientWidth": 375,
        "coordinateSystemBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "parentLayoutSystem": "nonfixed",
        "position": "absolute",
        "usesParentBounds": true,
      },
      "templatePath": Object {
        "element": Array [
          "aaa",
        ],
        "scene": Object {
          "sceneElementPath": Array [
            "utopia-storyboard-uid",
            "scene-aaa",
          ],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
]
`;

exports[`DOM Walker tests Label carried through for normal elements 1`] = `
Array [
  Object {
    "component": "storyboard",
    "container": Object {},
    "globalFrame": null,
    "label": "Storyboard",
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "childrenTemplatePaths": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": null,
          "localFrame": null,
          "props": Object {},
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 0,
            "coordinateSystemBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {},
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {},
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": false,
          },
          "templatePath": Object {
            "element": Array [
              "utopia-storyboard-uid",
              "scene-aaa",
            ],
            "scene": Object {
              "sceneElementPath": Array [],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": true,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": null,
      "localFrame": null,
      "props": Object {
        "data-uid": "utopia-storyboard-uid",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 0,
        "clientWidth": 0,
        "coordinateSystemBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {},
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {},
        "parentLayoutSystem": "nonfixed",
        "position": "static",
        "usesParentBounds": false,
      },
      "templatePath": Object {
        "element": Array [
          "utopia-storyboard-uid",
        ],
        "scene": Object {
          "sceneElementPath": Array [],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
  Object {
    "component": "App",
    "container": Object {
      "layoutSystem": "pinSystem",
    },
    "globalFrame": Object {
      "height": 812,
      "width": 375,
      "x": 0,
      "y": 0,
    },
    "label": undefined,
    "rootElement": Object {
      "children": Array [],
      "componentInstance": false,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "localFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "props": Object {
        "data-label": "Hat",
        "data-uid": "aaa",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
        "style": Object {
          "alignContent": undefined,
          "alignItems": undefined,
          "alignSelf": undefined,
          "bottom": 0,
          "flexBasis": undefined,
          "flexDirection": undefined,
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": undefined,
          "height": undefined,
          "justifyContent": undefined,
          "left": 0,
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
          "maxHeight": undefined,
          "maxWidth": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 812,
        "clientWidth": 375,
        "coordinateSystemBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "parentLayoutSystem": "nonfixed",
        "position": "absolute",
        "usesParentBounds": true,
      },
      "templatePath": Object {
        "element": Array [
          "aaa",
        ],
        "scene": Object {
          "sceneElementPath": Array [
            "utopia-storyboard-uid",
            "scene-aaa",
          ],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
]
`;

exports[`DOM Walker tests Simple Project with divs 1`] = `
Array [
  Object {
    "component": "storyboard",
    "container": Object {},
    "globalFrame": null,
    "label": "Storyboard",
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "childrenTemplatePaths": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": null,
          "localFrame": null,
          "props": Object {},
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 0,
            "coordinateSystemBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {},
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {},
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": false,
          },
          "templatePath": Object {
            "element": Array [
              "utopia-storyboard-uid",
              "scene-aaa",
            ],
            "scene": Object {
              "sceneElementPath": Array [],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": true,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": null,
      "localFrame": null,
      "props": Object {
        "data-uid": "utopia-storyboard-uid",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 0,
        "clientWidth": 0,
        "coordinateSystemBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {},
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {},
        "parentLayoutSystem": "nonfixed",
        "position": "static",
        "usesParentBounds": false,
      },
      "templatePath": Object {
        "element": Array [
          "utopia-storyboard-uid",
        ],
        "scene": Object {
          "sceneElementPath": Array [],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
  Object {
    "component": "App",
    "container": Object {
      "layoutSystem": "pinSystem",
    },
    "globalFrame": Object {
      "height": 812,
      "width": 375,
      "x": 0,
      "y": 0,
    },
    "label": undefined,
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "componentInstance": false,
              "element": Object {
                "type": "LEFT",
                "value": "REMOVED_FROM_TEST",
              },
              "globalFrame": Object {
                "height": 70,
                "width": 125,
                "x": 126,
                "y": 125,
              },
              "localFrame": Object {
                "height": 70,
                "width": 125,
                "x": 71,
                "y": 27,
              },
              "props": Object {
                "data-uid": "488",
                "data-utopia-original-uid": undefined,
                "skipDeepFreeze": true,
                "style": Object {
                  "alignContent": undefined,
                  "alignItems": undefined,
                  "alignSelf": undefined,
                  "backgroundColor": "#DDDDDD",
                  "bottom": undefined,
                  "flexBasis": undefined,
                  "flexDirection": undefined,
                  "flexGrow": undefined,
                  "flexShrink": undefined,
                  "flexWrap": undefined,
                  "height": 70,
                  "justifyContent": undefined,
                  "left": 71,
                  "marginBottom": undefined,
                  "marginLeft": undefined,
                  "marginRight": undefined,
                  "marginTop": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "position": "absolute",
                  "right": undefined,
                  "top": 27,
                  "width": 125,
                },
              },
              "specialSizeMeasurements": Object {
                "clientHeight": 70,
                "clientWidth": 125,
                "coordinateSystemBounds": Object {
                  "height": 164,
                  "width": 306,
                  "x": 55,
                  "y": 98,
                },
                "immediateParentBounds": Object {
                  "height": 164,
                  "width": 306,
                  "x": 55,
                  "y": 98,
                },
                "immediateParentProvidesLayout": true,
                "layoutSystemForChildren": "nonfixed",
                "margin": Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                },
                "naturalHeight": null,
                "naturalWidth": null,
                "offset": Object {
                  "x": 71,
                  "y": 27,
                },
                "padding": Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                },
                "parentLayoutSystem": "flow",
                "position": "absolute",
                "usesParentBounds": false,
              },
              "templatePath": Object {
                "element": Array [
                  "05c",
                  "ef0",
                  "488",
                ],
                "scene": Object {
                  "sceneElementPath": Array [
                    "utopia-storyboard-uid",
                    "scene-aaa",
                  ],
                  "type": "scenepath",
                },
              },
            },
          ],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": Object {
            "height": 164,
            "width": 306,
            "x": 55,
            "y": 98,
          },
          "localFrame": Object {
            "height": 164,
            "width": 306,
            "x": 55,
            "y": 98,
          },
          "props": Object {
            "data-uid": "ef0",
            "data-utopia-original-uid": undefined,
            "skipDeepFreeze": true,
            "style": Object {
              "alignContent": undefined,
              "alignItems": undefined,
              "alignSelf": undefined,
              "backgroundColor": "#DDDDDD",
              "bottom": undefined,
              "flexBasis": undefined,
              "flexDirection": undefined,
              "flexGrow": undefined,
              "flexShrink": undefined,
              "flexWrap": undefined,
              "height": 124,
              "justifyContent": undefined,
              "left": 55,
              "marginBottom": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginTop": undefined,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "padding": 20,
              "position": "fixed",
              "right": undefined,
              "top": 98,
              "width": 266,
            },
          },
          "specialSizeMeasurements": Object {
            "clientHeight": 164,
            "clientWidth": 306,
            "coordinateSystemBounds": null,
            "immediateParentBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": false,
            "layoutSystemForChildren": "flow",
            "margin": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 55,
              "y": 98,
            },
            "padding": Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            },
            "parentLayoutSystem": "nonfixed",
            "position": "fixed",
            "usesParentBounds": true,
          },
          "templatePath": Object {
            "element": Array [
              "05c",
              "ef0",
            ],
            "scene": Object {
              "sceneElementPath": Array [
                "utopia-storyboard-uid",
                "scene-aaa",
              ],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": false,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "localFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "props": Object {
        "data-uid": "05c",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
        "style": Object {
          "alignContent": undefined,
          "alignItems": undefined,
          "alignSelf": undefined,
          "backgroundColor": "#FFFFFF",
          "bottom": 0,
          "flexBasis": undefined,
          "flexDirection": undefined,
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": undefined,
          "height": undefined,
          "justifyContent": undefined,
          "left": 0,
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
          "maxHeight": undefined,
          "maxWidth": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 812,
        "clientWidth": 375,
        "coordinateSystemBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "parentLayoutSystem": "nonfixed",
        "position": "absolute",
        "usesParentBounds": true,
      },
      "templatePath": Object {
        "element": Array [
          "05c",
        ],
        "scene": Object {
          "sceneElementPath": Array [
            "utopia-storyboard-uid",
            "scene-aaa",
          ],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
]
`;

exports[`DOM Walker tests Simple Project with flex parent 1`] = `
Array [
  Object {
    "component": "storyboard",
    "container": Object {},
    "globalFrame": null,
    "label": "Storyboard",
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "childrenTemplatePaths": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": null,
          "localFrame": null,
          "props": Object {},
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 0,
            "coordinateSystemBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {},
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {},
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": false,
          },
          "templatePath": Object {
            "element": Array [
              "utopia-storyboard-uid",
              "scene-aaa",
            ],
            "scene": Object {
              "sceneElementPath": Array [],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": true,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": null,
      "localFrame": null,
      "props": Object {
        "data-uid": "utopia-storyboard-uid",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 0,
        "clientWidth": 0,
        "coordinateSystemBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {},
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {},
        "parentLayoutSystem": "nonfixed",
        "position": "static",
        "usesParentBounds": false,
      },
      "templatePath": Object {
        "element": Array [
          "utopia-storyboard-uid",
        ],
        "scene": Object {
          "sceneElementPath": Array [],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
  Object {
    "component": "App",
    "container": Object {
      "layoutSystem": "pinSystem",
    },
    "globalFrame": Object {
      "height": 812,
      "width": 375,
      "x": 0,
      "y": 0,
    },
    "label": undefined,
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "componentInstance": false,
              "element": Object {
                "type": "LEFT",
                "value": "REMOVED_FROM_TEST",
              },
              "globalFrame": Object {
                "height": 70,
                "width": 125,
                "x": 126,
                "y": 125,
              },
              "localFrame": Object {
                "height": 70,
                "width": 125,
                "x": 71,
                "y": 27,
              },
              "props": Object {
                "data-uid": "488",
                "data-utopia-original-uid": undefined,
                "skipDeepFreeze": true,
                "style": Object {
                  "alignContent": undefined,
                  "alignItems": undefined,
                  "alignSelf": undefined,
                  "backgroundColor": "#DDDDDD",
                  "bottom": undefined,
                  "flexBasis": undefined,
                  "flexDirection": undefined,
                  "flexGrow": undefined,
                  "flexShrink": undefined,
                  "flexWrap": undefined,
                  "height": 70,
                  "justifyContent": undefined,
                  "left": 71,
                  "marginBottom": undefined,
                  "marginLeft": undefined,
                  "marginRight": undefined,
                  "marginTop": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "position": "absolute",
                  "right": undefined,
                  "top": 27,
                  "width": 125,
                },
              },
              "specialSizeMeasurements": Object {
                "clientHeight": 70,
                "clientWidth": 125,
                "coordinateSystemBounds": Object {
                  "height": 164,
                  "width": 306,
                  "x": 55,
                  "y": 98,
                },
                "immediateParentBounds": Object {
                  "height": 164,
                  "width": 306,
                  "x": 55,
                  "y": 98,
                },
                "immediateParentProvidesLayout": true,
                "layoutSystemForChildren": "nonfixed",
                "margin": Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                },
                "naturalHeight": null,
                "naturalWidth": null,
                "offset": Object {
                  "x": 71,
                  "y": 27,
                },
                "padding": Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                },
                "parentLayoutSystem": "flow",
                "position": "absolute",
                "usesParentBounds": false,
              },
              "templatePath": Object {
                "element": Array [
                  "05c",
                  "ef0",
                  "488",
                ],
                "scene": Object {
                  "sceneElementPath": Array [
                    "utopia-storyboard-uid",
                    "scene-aaa",
                  ],
                  "type": "scenepath",
                },
              },
            },
          ],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": Object {
            "height": 164,
            "width": 306,
            "x": 55,
            "y": 98,
          },
          "localFrame": Object {
            "height": 164,
            "width": 306,
            "x": 55,
            "y": 98,
          },
          "props": Object {
            "data-uid": "ef0",
            "data-utopia-original-uid": undefined,
            "skipDeepFreeze": true,
            "style": Object {
              "alignContent": undefined,
              "alignItems": undefined,
              "alignSelf": undefined,
              "backgroundColor": "#DDDDDD",
              "bottom": undefined,
              "flexBasis": undefined,
              "flexDirection": undefined,
              "flexGrow": undefined,
              "flexShrink": undefined,
              "flexWrap": undefined,
              "height": 124,
              "justifyContent": undefined,
              "left": 55,
              "marginBottom": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginTop": undefined,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "padding": 20,
              "position": "fixed",
              "right": undefined,
              "top": 98,
              "width": 266,
            },
          },
          "specialSizeMeasurements": Object {
            "clientHeight": 164,
            "clientWidth": 306,
            "coordinateSystemBounds": null,
            "immediateParentBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": false,
            "layoutSystemForChildren": "flow",
            "margin": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 55,
              "y": 98,
            },
            "padding": Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            },
            "parentLayoutSystem": "flex",
            "position": "fixed",
            "usesParentBounds": true,
          },
          "templatePath": Object {
            "element": Array [
              "05c",
              "ef0",
            ],
            "scene": Object {
              "sceneElementPath": Array [
                "utopia-storyboard-uid",
                "scene-aaa",
              ],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": false,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "localFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "props": Object {
        "data-uid": "05c",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
        "style": Object {
          "alignContent": undefined,
          "alignItems": undefined,
          "alignSelf": undefined,
          "backgroundColor": "#FFFFFF",
          "bottom": 0,
          "display": "flex",
          "flexBasis": undefined,
          "flexDirection": undefined,
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": undefined,
          "height": undefined,
          "justifyContent": undefined,
          "left": 0,
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
          "maxHeight": undefined,
          "maxWidth": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 812,
        "clientWidth": 375,
        "coordinateSystemBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "flex",
        "margin": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "parentLayoutSystem": "nonfixed",
        "position": "absolute",
        "usesParentBounds": true,
      },
      "templatePath": Object {
        "element": Array [
          "05c",
        ],
        "scene": Object {
          "sceneElementPath": Array [
            "utopia-storyboard-uid",
            "scene-aaa",
          ],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
]
`;

exports[`DOM Walker tests Simple Project with one child View 1`] = `
Array [
  Object {
    "component": "storyboard",
    "container": Object {},
    "globalFrame": null,
    "label": "Storyboard",
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "childrenTemplatePaths": Array [],
          "componentInstance": false,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": null,
          "localFrame": null,
          "props": Object {},
          "specialSizeMeasurements": Object {
            "clientHeight": 0,
            "clientWidth": 0,
            "coordinateSystemBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 0,
              "width": 0,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {},
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 0,
              "y": 0,
            },
            "padding": Object {},
            "parentLayoutSystem": "nonfixed",
            "position": "static",
            "usesParentBounds": false,
          },
          "templatePath": Object {
            "element": Array [
              "utopia-storyboard-uid",
              "scene-aaa",
            ],
            "scene": Object {
              "sceneElementPath": Array [],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": true,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": null,
      "localFrame": null,
      "props": Object {
        "data-uid": "utopia-storyboard-uid",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 0,
        "clientWidth": 0,
        "coordinateSystemBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {},
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {},
        "parentLayoutSystem": "nonfixed",
        "position": "static",
        "usesParentBounds": false,
      },
      "templatePath": Object {
        "element": Array [
          "utopia-storyboard-uid",
        ],
        "scene": Object {
          "sceneElementPath": Array [],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
  Object {
    "component": "App",
    "container": Object {
      "layoutSystem": "pinSystem",
    },
    "globalFrame": Object {
      "height": 812,
      "width": 375,
      "x": 0,
      "y": 0,
    },
    "label": undefined,
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "componentInstance": true,
              "element": Object {
                "type": "LEFT",
                "value": "REMOVED_FROM_TEST",
              },
              "globalFrame": Object {
                "height": 70,
                "width": 125,
                "x": 126,
                "y": 125,
              },
              "localFrame": Object {
                "height": 70,
                "width": 125,
                "x": 71,
                "y": 27,
              },
              "props": Object {
                "data-uid": "488",
                "data-utopia-original-uid": undefined,
                "skipDeepFreeze": true,
                "style": Object {
                  "alignContent": undefined,
                  "alignItems": undefined,
                  "alignSelf": undefined,
                  "backgroundColor": "#DDDDDD",
                  "bottom": undefined,
                  "flexBasis": undefined,
                  "flexDirection": undefined,
                  "flexGrow": undefined,
                  "flexShrink": undefined,
                  "flexWrap": undefined,
                  "height": 70,
                  "justifyContent": undefined,
                  "left": 71,
                  "marginBottom": undefined,
                  "marginLeft": undefined,
                  "marginRight": undefined,
                  "marginTop": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "position": "absolute",
                  "right": undefined,
                  "top": 27,
                  "width": 125,
                },
              },
              "specialSizeMeasurements": Object {
                "clientHeight": 70,
                "clientWidth": 125,
                "coordinateSystemBounds": Object {
                  "height": 124,
                  "width": 266,
                  "x": 55,
                  "y": 98,
                },
                "immediateParentBounds": Object {
                  "height": 124,
                  "width": 266,
                  "x": 55,
                  "y": 98,
                },
                "immediateParentProvidesLayout": true,
                "layoutSystemForChildren": "nonfixed",
                "margin": Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                },
                "naturalHeight": null,
                "naturalWidth": null,
                "offset": Object {
                  "x": 71,
                  "y": 27,
                },
                "padding": Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                },
                "parentLayoutSystem": "nonfixed",
                "position": "absolute",
                "usesParentBounds": true,
              },
              "templatePath": Object {
                "element": Array [
                  "05c",
                  "ef0",
                  "488",
                ],
                "scene": Object {
                  "sceneElementPath": Array [
                    "utopia-storyboard-uid",
                    "scene-aaa",
                  ],
                  "type": "scenepath",
                },
              },
            },
          ],
          "componentInstance": true,
          "element": Object {
            "type": "LEFT",
            "value": "REMOVED_FROM_TEST",
          },
          "globalFrame": Object {
            "height": 124,
            "width": 266,
            "x": 55,
            "y": 98,
          },
          "localFrame": Object {
            "height": 124,
            "width": 266,
            "x": 55,
            "y": 98,
          },
          "props": Object {
            "data-uid": "ef0",
            "data-utopia-original-uid": undefined,
            "skipDeepFreeze": true,
            "style": Object {
              "alignContent": undefined,
              "alignItems": undefined,
              "alignSelf": undefined,
              "backgroundColor": "#DDDDDD",
              "bottom": undefined,
              "flexBasis": undefined,
              "flexDirection": undefined,
              "flexGrow": undefined,
              "flexShrink": undefined,
              "flexWrap": undefined,
              "height": 124,
              "justifyContent": undefined,
              "left": 55,
              "marginBottom": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginTop": undefined,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "right": undefined,
              "top": 98,
              "width": 266,
            },
          },
          "specialSizeMeasurements": Object {
            "clientHeight": 124,
            "clientWidth": 266,
            "coordinateSystemBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentBounds": Object {
              "height": 812,
              "width": 375,
              "x": 0,
              "y": 0,
            },
            "immediateParentProvidesLayout": true,
            "layoutSystemForChildren": "nonfixed",
            "margin": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "naturalHeight": null,
            "naturalWidth": null,
            "offset": Object {
              "x": 55,
              "y": 98,
            },
            "padding": Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            },
            "parentLayoutSystem": "nonfixed",
            "position": "absolute",
            "usesParentBounds": true,
          },
          "templatePath": Object {
            "element": Array [
              "05c",
              "ef0",
            ],
            "scene": Object {
              "sceneElementPath": Array [
                "utopia-storyboard-uid",
                "scene-aaa",
              ],
              "type": "scenepath",
            },
          },
        },
      ],
      "componentInstance": true,
      "element": Object {
        "type": "LEFT",
        "value": "REMOVED_FROM_TEST",
      },
      "globalFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "localFrame": Object {
        "height": 812,
        "width": 375,
        "x": 0,
        "y": 0,
      },
      "props": Object {
        "data-uid": "05c",
        "data-utopia-original-uid": undefined,
        "skipDeepFreeze": true,
        "style": Object {
          "alignContent": undefined,
          "alignItems": undefined,
          "alignSelf": undefined,
          "backgroundColor": "#FFFFFF",
          "bottom": 0,
          "flexBasis": undefined,
          "flexDirection": undefined,
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": undefined,
          "height": undefined,
          "justifyContent": undefined,
          "left": 0,
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
          "maxHeight": undefined,
          "maxWidth": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
      },
      "specialSizeMeasurements": Object {
        "clientHeight": 812,
        "clientWidth": 375,
        "coordinateSystemBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentBounds": Object {
          "height": 812,
          "width": 375,
          "x": 0,
          "y": 0,
        },
        "immediateParentProvidesLayout": true,
        "layoutSystemForChildren": "nonfixed",
        "margin": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "naturalHeight": null,
        "naturalWidth": null,
        "offset": Object {
          "x": 0,
          "y": 0,
        },
        "padding": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "parentLayoutSystem": "nonfixed",
        "position": "absolute",
        "usesParentBounds": true,
      },
      "templatePath": Object {
        "element": Array [
          "05c",
        ],
        "scene": Object {
          "sceneElementPath": Array [
            "utopia-storyboard-uid",
            "scene-aaa",
          ],
          "type": "scenepath",
        },
      },
    },
    "scenePath": Object {
      "sceneElementPath": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "type": "scenepath",
    },
    "templatePath": Object {
      "element": Array [
        "utopia-storyboard-uid",
        "scene-aaa",
      ],
      "scene": Object {
        "sceneElementPath": Array [],
        "type": "scenepath",
      },
    },
    "type": "static",
  },
]
`;
